// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`account PTB builders > addDelegate 1`] = `
[
  {
    "argumentKinds": [],
    "function": "request",
    "module": "account",
    "package": "0x0cdfc09284014fd36bbb19da8ab1c60056ca207d4c866e78dc01ca8e51dac790",
    "typeArguments": [],
  },
  {
    "argumentKinds": [
      "Input",
      "NestedResult",
      "Input",
      "Input",
      "Input",
      "Input",
      "Input",
      "Input",
    ],
    "function": "add_delegate",
    "module": "account",
    "package": "0xaca20506c4b14cfd2ea767d68e3dd489af082b2d0f6ed6f33b32e78abeaff2cc",
    "typeArguments": [],
  },
]
`;

exports[`account PTB builders > addDelegate with expiry timestamp 1`] = `
[
  {
    "argumentKinds": [],
    "function": "request",
    "module": "account",
    "package": "0x0cdfc09284014fd36bbb19da8ab1c60056ca207d4c866e78dc01ca8e51dac790",
    "typeArguments": [],
  },
  {
    "argumentKinds": [
      "Input",
      "NestedResult",
      "Input",
      "Input",
      "Input",
      "Input",
      "Input",
      "Input",
    ],
    "function": "add_delegate",
    "module": "account",
    "package": "0xaca20506c4b14cfd2ea767d68e3dd489af082b2d0f6ed6f33b32e78abeaff2cc",
    "typeArguments": [],
  },
]
`;

exports[`account PTB builders > allow / disallow prediction protocol settlement asset 1`] = `
[
  {
    "argumentKinds": [
      "Input",
      "Input",
    ],
    "function": "allow_protocol_asset",
    "module": "account",
    "package": "0xaca20506c4b14cfd2ea767d68e3dd489af082b2d0f6ed6f33b32e78abeaff2cc",
    "typeArguments": [
      "0x0ced3be529195de0e9f3714622bff49feb4e72ef8588e0d53594324d961b6738::account_data::WaterXPrediction",
      "0x5b60857dc403e65a3406c65402765e518259ba3394588f9528aa4f895378764e::usd::USD",
    ],
  },
]
`;

exports[`account PTB builders > allow / disallow prediction protocol settlement asset 2`] = `
[
  {
    "argumentKinds": [
      "Input",
      "Input",
    ],
    "function": "disallow_protocol_asset",
    "module": "account",
    "package": "0xaca20506c4b14cfd2ea767d68e3dd489af082b2d0f6ed6f33b32e78abeaff2cc",
    "typeArguments": [
      "0x0ced3be529195de0e9f3714622bff49feb4e72ef8588e0d53594324d961b6738::account_data::WaterXPrediction",
      "0x5b60857dc403e65a3406c65402765e518259ba3394588f9528aa4f895378764e::usd::USD",
    ],
  },
]
`;

exports[`account PTB builders > createAccount 1`] = `
[
  {
    "argumentKinds": [],
    "function": "request",
    "module": "account",
    "package": "0x0cdfc09284014fd36bbb19da8ab1c60056ca207d4c866e78dc01ca8e51dac790",
    "typeArguments": [],
  },
  {
    "argumentKinds": [
      "Input",
      "NestedResult",
      "Input",
    ],
    "function": "create_account",
    "module": "account",
    "package": "0xaca20506c4b14cfd2ea767d68e3dd489af082b2d0f6ed6f33b32e78abeaff2cc",
    "typeArguments": [],
  },
]
`;

exports[`account PTB builders > deposit 1`] = `
[
  {
    "argumentKinds": [
      "Input",
      "Input",
      "Input",
      "Input",
    ],
    "function": "request_deposit",
    "module": "account",
    "package": "0xaca20506c4b14cfd2ea767d68e3dd489af082b2d0f6ed6f33b32e78abeaff2cc",
    "typeArguments": [
      "0x5b60857dc403e65a3406c65402765e518259ba3394588f9528aa4f895378764e::usd::USD",
    ],
  },
  {
    "argumentKinds": [
      "Input",
      "NestedResult",
    ],
    "function": "consume_deposit_direct",
    "module": "direct_rule",
    "package": "0xaca20506c4b14cfd2ea767d68e3dd489af082b2d0f6ed6f33b32e78abeaff2cc",
    "typeArguments": [
      "0x5b60857dc403e65a3406c65402765e518259ba3394588f9528aa4f895378764e::usd::USD",
    ],
  },
]
`;

exports[`account PTB builders > removeDelegate 1`] = `
[
  {
    "argumentKinds": [],
    "function": "request",
    "module": "account",
    "package": "0x0cdfc09284014fd36bbb19da8ab1c60056ca207d4c866e78dc01ca8e51dac790",
    "typeArguments": [],
  },
  {
    "argumentKinds": [
      "Input",
      "NestedResult",
      "Input",
      "Input",
      "Input",
    ],
    "function": "remove_delegate",
    "module": "account",
    "package": "0xaca20506c4b14cfd2ea767d68e3dd489af082b2d0f6ed6f33b32e78abeaff2cc",
    "typeArguments": [],
  },
]
`;

exports[`account PTB builders > requestDeposit 1`] = `
[
  {
    "argumentKinds": [
      "Input",
      "Input",
      "Input",
      "Input",
    ],
    "function": "request_deposit",
    "module": "account",
    "package": "0xaca20506c4b14cfd2ea767d68e3dd489af082b2d0f6ed6f33b32e78abeaff2cc",
    "typeArguments": [
      "0x5b60857dc403e65a3406c65402765e518259ba3394588f9528aa4f895378764e::usd::USD",
    ],
  },
]
`;

exports[`account PTB builders > requestDepositFromReceivings 1`] = `
[
  {
    "argumentKinds": [
      "Input",
      "Input",
      "Result",
      "Input",
    ],
    "function": "request_deposit_from_receivings",
    "module": "account",
    "package": "0xaca20506c4b14cfd2ea767d68e3dd489af082b2d0f6ed6f33b32e78abeaff2cc",
    "typeArguments": [
      "0x5b60857dc403e65a3406c65402765e518259ba3394588f9528aa4f895378764e::usd::USD",
    ],
  },
]
`;

exports[`account PTB builders > requestWithdraw 1`] = `
[
  {
    "argumentKinds": [],
    "function": "request",
    "module": "account",
    "package": "0x0cdfc09284014fd36bbb19da8ab1c60056ca207d4c866e78dc01ca8e51dac790",
    "typeArguments": [],
  },
  {
    "argumentKinds": [
      "Input",
      "NestedResult",
      "Input",
      "Input",
      "Input",
      "Input",
      "Input",
    ],
    "function": "request_withdraw",
    "module": "account",
    "package": "0xaca20506c4b14cfd2ea767d68e3dd489af082b2d0f6ed6f33b32e78abeaff2cc",
    "typeArguments": [
      "0x5b60857dc403e65a3406c65402765e518259ba3394588f9528aa4f895378764e::usd::USD",
    ],
  },
]
`;

exports[`account PTB builders > setDelegatePredictionPermission 1`] = `
[
  {
    "argumentKinds": [],
    "function": "request",
    "module": "account",
    "package": "0x0cdfc09284014fd36bbb19da8ab1c60056ca207d4c866e78dc01ca8e51dac790",
    "typeArguments": [],
  },
  {
    "argumentKinds": [
      "Input",
      "NestedResult",
      "Input",
      "Input",
      "Input",
      "Input",
    ],
    "function": "set_delegate_protocol_permission",
    "module": "account",
    "package": "0xaca20506c4b14cfd2ea767d68e3dd489af082b2d0f6ed6f33b32e78abeaff2cc",
    "typeArguments": [
      "0x0ced3be529195de0e9f3714622bff49feb4e72ef8588e0d53594324d961b6738::account_data::WaterXPrediction",
    ],
  },
]
`;

exports[`account PTB builders > transferCoinToAccount 1`] = `
[
  {
    "argumentKinds": [
      "Input",
      "Input",
      "Input",
    ],
    "function": "transfer_coin",
    "module": "account",
    "package": "0xaca20506c4b14cfd2ea767d68e3dd489af082b2d0f6ed6f33b32e78abeaff2cc",
    "typeArguments": [
      "0x5b60857dc403e65a3406c65402765e518259ba3394588f9528aa4f895378764e::usd::USD",
    ],
  },
]
`;

exports[`account PTB builders > whitelistPredictionProtocol 1`] = `
[
  {
    "argumentKinds": [
      "Input",
      "Input",
    ],
    "function": "whitelist_protocol",
    "module": "account",
    "package": "0xaca20506c4b14cfd2ea767d68e3dd489af082b2d0f6ed6f33b32e78abeaff2cc",
    "typeArguments": [
      "0x0ced3be529195de0e9f3714622bff49feb4e72ef8588e0d53594324d961b6738::account_data::WaterXPrediction",
    ],
  },
]
`;
